SP Screen ResDev (Partial)/src/objects/Project_Issue__c.object
<CustomObject>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Product Classification</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lock</fullName>
                </value>
                <value>
                    <fullName>SecureView Hinged Door</fullName>
                </value>
                <value>
                    <fullName>Xceed Hinged Door</fullName>
                </value>
                <value>
                    <fullName>SecureView Sliding Door</fullName>
                </value>
                <value>
                    <fullName>Xceed Sliding Door</fullName>
                </value>
                <value>
                    <fullName>Diamond Door</fullName>
                </value>
                <value>
                    <fullName>Retractable Screen</fullName>
                </value>
                <value>
                    <fullName>Fire Escape</fullName>
                </value>
                <value>
                    <fullName>Steel</fullName>
                </value>
                <value>
                    <fullName>SecureView Window</fullName>
                </value>
                <value>
                    <fullName>Xceed Window</fullName>
                </value>
                <value>
                    <fullName>Flyscreen</fullName>
                </value>
                <value>
                    <fullName>Diamond Window</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completion_Date_ETA__c</fullName>
        <label>Completion Date ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Issues</relationshipLabel>
        <relationshipName>Project_Issues</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Identified__c</fullName>
        <label>Date Identified</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Resolved__c</fullName>
        <label>Date Resolved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Installer__c</fullName>
        <label>Installer</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adam Covey</fullName>
                </value>
                <value>
                    <fullName>Adam Williams</fullName>
                </value>
                <value>
                    <fullName>Brent Birch</fullName>
                </value>
                <value>
                    <fullName>Carlol Botha</fullName>
                </value>
                <value>
                    <fullName>John Bateman</fullName>
                </value>
                <value>
                    <fullName>Justin Griffiths</fullName>
                </value>
                <value>
                    <fullName>Not Installed: Factory</fullName>
                </value>
                <value>
                    <fullName>Scott Turner</fullName>
                </value>
                <value>
                    <fullName>Shaun Hutchings</fullName>
                </value>
                <value>
                    <fullName>Steve Lawrence</fullName>
                </value>
                <value>
                    <fullName>Tony Eddie</fullName>
                </value>
                <value>
                    <fullName>Russell Thorn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Category__c</fullName>
        <label>Issue Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incorrect CM</fullName>
                </value>
                <value>
                    <fullName>Incorrect Install</fullName>
                </value>
                <value>
                    <fullName>Incomplete Accessories given to Installer</fullName>
                </value>
                <value>
                    <fullName>Incorrect details on Sales Quote from Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Damaged in Transit</fullName>
                </value>
                <value>
                    <fullName>Incorrectly Ordered</fullName>
                </value>
                <value>
                    <fullName>Incorrectly Built ROCKFORD</fullName>
                </value>
                <value>
                    <fullName>Incorrect Built IN-HOUSE</fullName>
                </value>
                <value>
                    <fullName>Incorrectly Built CWS</fullName>
                </value>
                <value>
                    <fullName>Lock CommandeX</fullName>
                </value>
                <value>
                    <fullName>Lock: Other</fullName>
                </value>
                <value>
                    <fullName>Repair: warranty issue</fullName>
                </value>
                <value>
                    <fullName>Repair: Customer at fault</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Install_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Install Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>New Install</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Issues</relationshipLabel>
        <relationshipName>Project_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project/Action Plan Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rework__c</fullName>
        <label>Rework Owner</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rockford</fullName>
                </value>
                <value>
                    <fullName>CommandeX</fullName>
                </value>
                <value>
                    <fullName>SP Screens inhouse</fullName>
                </value>
                <value>
                    <fullName>CW Systems</fullName>
                </value>
                <value>
                    <fullName>ACE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rework</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Incomplete Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_of_Cost_of_Rework__c</fullName>
        <description>Include all costs; labour, customer discount, product cost.</description>
        <label>$ Value of Cost of Rework</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Project Issue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Project_Issues</fullName>
        <columns>NAME</columns>
        <columns>Installer__c</columns>
        <columns>Date_Identified__c</columns>
        <columns>Date_Resolved__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Classification__c</columns>
        <columns>Issue_Category__c</columns>
        <columns>Description__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Project Issues</label>
    </listViews>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Project Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>